--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </header>
 
     <nav>
-        <a href="login.html">دخول</a>
+        <a href="index.html">تسجيل الدخول</a>
     </nav>
 
     <main>
