--- a/places.html
+++ b/places.html
@@ -92,11 +92,11 @@
     </header>
 
     <nav>
-        <a href="index.html">الرئيسية</a>
+        <a href="home.html">الرئيسية</a>
         <a href="places.html">المعالم</a>
         <a href="contact.html">تواصل</a>
         <a href="form.html">نموذج</a>
-        <a href="login.html">خروج</a>
+        <a href="index.html">تسجيل الدخول</a>
     </nav>
 
     <main>
