--- a/places.html
+++ b/places.html
@@ -7,141 +7,85 @@
     <link href="https://fonts.googleapis.com/css2?family=Almarai&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Almarai', sans-serif;
-            background-color: #f4f7f5;
-            color: #2c3e50;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            text-align: center;
-            padding: 20px;
-            background-color: #e6f0ec;
-        }
-
-        nav {
-            background-color: #4a766e;
-            padding: 15px;
-            text-align: center;
-        }
-
-            nav a {
-                color: white;
-                text-decoration: none;
-                margin: 0 15px;
-                font-weight: bold;
-                transition: color 0.3s;
-            }
-
-                nav a:hover {
-                    color: #d4edda;
-                }
-
-        main {
-            padding: 30px 20px;
-            max-width: 900px;
-            margin: auto;
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 40px;
-            color: #004080;
-        }
-
-        .city {
-            margin-bottom: 40px;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-            .city img {
-                width: 90%;
-                max-width: 300px;
-                border-radius: 10px;
-                margin-top: 10px;
-            }
-
-            .city h3 {
-                margin-bottom: 10px;
-                color: #333;
-            }
-
-            .city p {
-                font-size: 1em;
-                color: #555;
-                margin-top: 10px;
-            }
-
-        footer {
-            text-align: center;
-            padding: 15px;
-            background-color: #e6f0ec;
-            margin-top: 30px;
-            font-size: 0.9em;
-        }
+        body { font-family: 'Almarai', sans-serif; background-color: #f4f7f5; color: #2c3e50; margin: 0; padding: 0; }
+        /* باقي التنسيقات حسب تصميمك السابق */
     </style>
 </head>
 <body>
-    <header>
-        <h1>المعالم السياحية</h1>
-    </header>
 
-    <nav>
-        <a href="home.html">الرئيسية</a>
-        <a href="places.html">المعالم</a>
-        <a href="contact.html">تواصل</a>
-        <a href="form.html">نموذج</a>
-        <a href="index.html">تسجيل الدخول</a>
-    </nav>
+<header>
+    <h1>المعالم السياحية</h1>
+</header>
 
-    <main>
-        <h2>مدن سياحية في المملكة العربية السعودية</h2>
+<nav>
+    <a href="home.html">الرئيسية</a>
+    <a href="places.html">المعالم</a>
+    <a href="contact.html">تواصل</a>
+    <a href="form.html">نموذج</a>
+    <a href="index.html" id="loginLink">تسجيل الدخول</a>
+</nav>
 
-        <div class="city">
-            <h3>مكة المكرمة</h3>
-            <img src="images/makkah.jpg" alt="المسجد الحرام">
-            <p>المسجد الحرام، أعظم مسجد في الإسلام ويقع في قلب مكة.</p>
-        </div>
+<main>
+    <h2>مدن سياحية في المملكة العربية السعودية</h2>
 
-        <div class="city">
-            <h3>المدينة المنورة</h3>
-            <img src="images/madinah.jpg" alt="المسجد النبوي">
-            <p>المسجد النبوي، ثاني أقدس مسجد في الإسلام بعد المسجد الحرام.</p>
-        </div>
+    <div class="city">
+        <h3>مكة المكرمة</h3>
+        <img src="images/makkah.jpg" alt="المسجد الحرام">
+        <p>المسجد الحرام، أعظم مسجد في الإسلام ويقع في قلب مكة.</p>
+    </div>
 
-        <div class="city">
-            <h3>العلا</h3>
-            <img src="images/ula.jpg" alt="جبل الفيل">
-            <p>جبل الفيل، تكوين صخري طبيعي شهير في محافظة العلا.</p>
-        </div>
+    <div class="city">
+        <h3>المدينة المنورة</h3>
+        <img src="images/madinah.jpg" alt="المسجد النبوي">
+        <p>المسجد النبوي، ثاني أقدس مسجد في الإسلام بعد المسجد الحرام.</p>
+    </div>
 
-        <div class="city">
-            <h3>الرياض</h3>
-            <img src="images/riyadh.jpg" alt="مركز كافد">
-            <p>مركز كافد، من أحدث المشاريع الحضارية والمعمارية في العاصمة الرياض.</p>
-        </div>
+    <div class="city">
+        <h3>العلا</h3>
+        <img src="images/ula.jpg" alt="جبل الفيل">
+        <p>جبل الفيل، تكوين صخري طبيعي شهير في محافظة العلا.</p>
+    </div>
 
-        <div class="city">
-            <h3>جدة</h3>
-            <img src="images/jeedah.jpg" alt="جدة">
-            <p>جدة، مدينة ساحلية على البحر الأحمر، وهي بوابة مكة. تتميز بمعالم مثل كورنيش جدة ونافورة الملك فهد، وتجمع بين التراث والحداثة..</p>
-        </div>
-        <div class="city">
-            <h3>نجران</h3>
-            <img src="images/najran.jpg" alt="نجران">
-            <p>نجران، مدينة تاريخية جنوب المملكة، تشتهر بموقعها الجميل ومعالم مثل قصر الإمارة وقرية الرفاع..</p>
-        </div>
+    <div class="city">
+        <h3>الرياض</h3>
+        <img src="images/riyadh.jpg" alt="مركز كافد">
+        <p>مركز كافد، من أحدث المشاريع الحضارية والمعمارية في العاصمة الرياض.</p>
+    </div>
 
+    <div class="city">
+        <h3>جدة</h3>
+        <img src="images/jeedah.jpg" alt="جدة">
+        <p>جدة، مدينة ساحلية على البحر الأحمر، تتميز بمعالم مثل كورنيش جدة ونافورة الملك فهد، وتجمع بين التراث والحداثة.</p>
+    </div>
 
-    </main>
+    <div class="city">
+        <h3>نجران</h3>
+        <img src="images/najran.jpg" alt="نجران">
+        <p>نجران، مدينة تاريخية جنوب المملكة، تشتهر بموقعها الجميل ومعالم مثل قصر الإمارة وقرية الرفاع.</p>
+    </div>
 
-    <footer>
-        <p>استكشف أجمل الأماكن في المملكة.</p>
-    </footer>
+</main>
+
+<footer>
+    <p>استكشف أجمل الأماكن في المملكة.</p>
+</footer>
+
+<script>
+window.onload = function() {
+    const loginLink = document.getElementById('loginLink');
+    if (localStorage.getItem('loggedIn') === 'true') {
+        loginLink.textContent = 'خروج';
+        loginLink.href = '#';
+        loginLink.onclick = function() {
+            localStorage.removeItem('loggedIn');
+            window.location.href = 'index.html';
+        };
+    } else {
+        loginLink.textContent = 'تسجيل الدخول';
+        loginLink.href = 'index.html';
+    }
+};
+</script>
+
 </body>
 </html>
