--- a/index.html
+++ b/index.html
@@ -5,7 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل الدخول</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/main.css"> <!-- هذا السطر مهم عشان يجينا التنسيق الصحيح -->
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            background-color: #f4f7f5;
+            color: #2c3e50;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4a766e;
+            text-align: center;
+            padding: 20px;
+            color: white;
+        }
+        nav {
+            background-color: #4a766e;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        main {
+            padding: 30px 20px;
+            max-width: 400px;
+            margin: 40px auto;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        form {
+            text-align: right;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .password-container {
+            position: relative;
+        }
+        .password-container button {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            color: #4a766e;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #4a766e;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        footer {
+            text-align: center;
+            background-color: #4a766e;
+            color: white;
+            padding: 10px;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,7 +104,7 @@
             <label for="password">كلمة المرور:</label>
             <div class="password-container">
                 <input type="password" id="password" name="password" required>
-                <button type="button" class="toggle-password" onclick="togglePassword()">إظهار</button>
+                <button type="button" onclick="togglePassword()">إظهار</button>
             </div>
 
             <button type="submit">دخول</button>
@@ -38,13 +118,10 @@
     <script>
         function togglePassword() {
             const passwordInput = document.getElementById("password");
-            const toggleBtn = document.querySelector(".toggle-password");
             if (passwordInput.type === "password") {
                 passwordInput.type = "text";
-                toggleBtn.textContent = "إخفاء";
             } else {
                 passwordInput.type = "password";
-                toggleBtn.textContent = "إظهار";
             }
         }
 
