--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,81 @@
     <title>التواصل</title>
     <link href="https://fonts.googleapis.com/css2?family=Almarai&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Almarai', sans-serif; background-color: #f4f7f5; color: #333; margin: 0; padding: 0; }
-        /* باقي التنسيقات حسب تصميمك السابق */
+        body {
+            font-family: 'Almarai', sans-serif;
+            background-color: #f4f7f5;
+            color: #2c3e50;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4a766e;
+            text-align: center;
+            padding: 20px;
+            color: white;
+        }
+        nav {
+            background-color: #4a766e;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        nav a:hover {
+            color: #d4edda;
+        }
+        main {
+            padding: 30px 20px;
+            max-width: 600px;
+            margin: auto;
+        }
+        form {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            margin-top: 8px;
+        }
+        input[type="text"],
+        input[type="email"],
+        textarea {
+            width: 95%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #4a766e;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #3b5e57;
+        }
+        .contact-info {
+            margin-top: 30px;
+            text-align: center;
+        }
+        footer {
+            background-color: #4a766e;
+            text-align: center;
+            color: white;
+            padding: 15px;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
@@ -20,11 +93,11 @@
     <a href="places.html">المعالم</a>
     <a href="contact.html">تواصل</a>
     <a href="form.html">نموذج</a>
-    <a href="index.html" id="loginLink">تسجيل الدخول</a>
+    <a id="loginLink" href="index.html">تسجيل الدخول</a>
 </nav>
 
 <main>
-    <h2>نموذج التواصل</h2>
+    <h2 style="text-align: center; margin-bottom: 20px;">نموذج التواصل</h2>
     <form id="contact-form">
         <label for="name">الاسم:</label>
         <input type="text" id="name" name="name" required>
@@ -32,10 +105,12 @@
         <label for="email">البريد الإلكتروني:</label>
         <input type="email" id="email" name="email" required>
 
-        <label for="message">رسالتك:</label>
+        <label for="message">الرسالة:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
-        <button type="submit">إرسال</button>
+        <div style="text-align: center; margin-top: 15px;">
+            <button type="submit">إرسال</button>
+        </div>
     </form>
 
     <div class="contact-info">
@@ -49,34 +124,27 @@
     &copy; 2025 دليل السياحة - جميع الحقوق محفوظة
 </footer>
 
-<div class="success-message" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #d4edda; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); font-size: 18px; color: #155724;">
-    <p>تم إرسال الرسالة بنجاح</p>
-</div>
-
 <script>
-document.getElementById('contact-form').addEventListener('submit', function (event) {
-    event.preventDefault();
-    document.querySelector('.success-message').style.display = 'block';
-    setTimeout(function () {
-        document.querySelector('.success-message').style.display = 'none';
-    }, 3000);
-    document.getElementById('contact-form').reset();
-});
+    document.getElementById('contact-form').addEventListener('submit', function(event) {
+        event.preventDefault();
+        alert('تم إرسال الرسالة بنجاح!');
+        document.getElementById('contact-form').reset();
+    });
 
-window.onload = function() {
-    const loginLink = document.getElementById('loginLink');
-    if (localStorage.getItem('loggedIn') === 'true') {
-        loginLink.textContent = 'خروج';
-        loginLink.href = '#';
-        loginLink.onclick = function() {
-            localStorage.removeItem('loggedIn');
-            window.location.href = 'index.html';
-        };
-    } else {
-        loginLink.textContent = 'تسجيل الدخول';
-        loginLink.href = 'index.html';
-    }
-};
+    window.onload = function() {
+        const loginLink = document.getElementById('loginLink');
+        if (localStorage.getItem('loggedIn') === 'true') {
+            loginLink.textContent = 'خروج';
+            loginLink.href = "#";
+            loginLink.onclick = function() {
+                localStorage.removeItem('loggedIn');
+                window.location.href = "index.html";
+            };
+        } else {
+            loginLink.textContent = 'تسجيل الدخول';
+            loginLink.href = 'index.html';
+        }
+    };
 </script>
 
 </body>
